# xerve

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: mod.rs
src/services/: mod.rs
src/ui/: mod.rs  resource_monitoring.rs  service_row.rs  terminal.rs  theme.rs
src/utils/: env_path.rs  load_icon.rs  mod.rs
