[package]
name = "xerve"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.32", features = ["default"] }

# For image support:
egui_extras = { version = "0.32", features = ["default", "image"] }

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }

ctrlc = "3.4"
once_cell = "1.19"
image = "0.24"
open = "5.3.2"
